// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcSidebarNav > renders navItem with toolTip if collapsed 1`] = `
"<li class="oc-sidebar-nav-item pb-1 px-2" index="5" id="123">
  <router-link-stub to="/files/list/all" aria-label="Navigate to Personal page" class="oc-button-surface oc-button-raw-inverse oc-button-surface-raw-inverse gap-2 justify-between text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default oc-sidebar-nav-item-link relative w-full whitespace-nowrap px-2 py-3 opacity-100 select-none rounded-xl hover:bg-role-surface-container-highest focus:bg-role-surface-container-highest" data-nav-name="route.name"></router-link-stub>
</li>"
`;

exports[`OcSidebarNav > renders navItem without toolTip if expanded 1`] = `
"<li class="oc-sidebar-nav-item pb-1 px-2" index="5" id="123">
  <router-link-stub to="/files/list/all" class="oc-button-surface oc-button-raw-inverse oc-button-surface-raw-inverse gap-2 justify-between text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default oc-sidebar-nav-item-link relative w-full whitespace-nowrap px-2 py-3 opacity-100 select-none rounded-xl hover:bg-role-surface-container-highest focus:bg-role-surface-container-highest" data-nav-name="route.name"></router-link-stub>
</li>"
`;
